<resources>
    <string name="app_name">Excite Point</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_login">Sign in</string>

    <!--our Main Fragment Title-->
    <string name="REDEEM_POINT">Tukar Poin</string>
    <string name="EARN_POINT">Dapatkan Poin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_list_earn_points_menu">ListEarnPointsMenu</string>
    <string name="title_home">Food &amp; Beverage</string>
    <string name="title_dashboard">Luxury Dining</string>
    <string name="title_notifications">Health &amp; Beauty</string>

    <string name="card_title_online_shop">Belanja Online</string>
    <string name="card_title_bonus_point">Bonus Point</string>
    <string name="card_title_stamp_program">Stamp Program</string>
    <string name="card_title_shop_in_merchant">Belanja di Merchant</string>
    <string name="card_title_excite_partner">Partner Excite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_redeem_details_home">RedeemDetailsHome</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- facebook -->
    <string name="facebook_app_id">641178312559454</string>
    <string name="fb_login_protocol_scheme">fb641178312559454</string>

    <!-- button login title -->
    <string name="facebook_button_title">Continue with Facebook</string>
    <string name="google_button_title">Continue with Google</string>

    <!-- Strings related to dashboard -->
    <string name="dashboard_redeem_tab_title">REDEEM POINT</string>
    <string name="dashboard_earn_tab_title">DAPATKAN POINT</string>
    <string name="title_activity_excite_partner_list">ExcitePartnerList</string>
    <string name="title_activity_nonetwork">NonetworkActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- push notif properties -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity__info_detail">Activity_InfoDetail</string>
</resources>
